fix: Comment header styling

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,6 @@
   box-shadow: none;
 }
 
-.sortby .ui.dividing.header.comment-header {
+.ui.dividing.header.comment-header {
   margin-top: 5px;
 }
